--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,7 +1,8 @@
 ---
 - include: setup.yml
 - hosts: default
+  vars:
+    ghq_executable: "{{ansible_env.HOME}}/.go/bin/ghq"
   roles:
   - suzuki-shunsuke.ghq-module
-  - role: ansible-gvm
-    gvm_ghq_executable: "{{ansible_env.HOME}}/.go/bin/ghq"
+  - ansible-gvm
