--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,17 +2,15 @@ galaxy_info:
   author: Suzuki Shunsuke
   description: Install gvm
   license: MIT
-  min_ansible_version: 1.2
+  min_ansible_version: 2.2
   github_branch: master
 
   platforms:
   - name: GenericLinux
-    versions:
-    - all
+  - name: Darwin
 
   galaxy_tags:
   - go
   - gvm
 
-dependencies:
-- suzuki-shunsuke.ghq-module
+dependencies: []
