test: use geerlingguy.git for setup of test

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ before_install:
 - ansible --version
 - cd tests
 
+install:
+- ansible-galaxy install -r roles.yml
+
 script:
 - ansible-playbook -i localhost test.yml
 
