--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,7 +1,8 @@
 ---
 - hosts: all
   roles:
-  - git
+  - role: geerlingguy.git
+    become: "{{ (ansible_env.USER is undefined) | ternary(ansible_env.HOME != '/root', ansible_env.USER != 'root') }}"
   - role: ansible-gvm
     gvm_is_dependencies_installed: yes
     gvm_rc_path: "{{ ansible_env.HOME }}/.bashrc"
