--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,6 +30,16 @@
       line: '. $GVM_ROOT/scripts/gvm-default'
       create: yes
   when: gvm_rc_path != "NOT ADD"
+# https://github.com/moovweb/gvm/blob/master/scripts/gvm-default
+- name: create directories (gvm-default)
+  file:
+    name: "{{ gvm_root }}/{{ item }}"
+    state: directory
+  items:
+  - logs
+  - gos
+  - archive/packages
+  - environments
 - block:
   - name: create directories
     file:
