--- a/tasks/Darwin.yml
+++ b/tasks/Darwin.yml
@@ -1,6 +1,5 @@
 ---
 - name: Install build dependencies
   homebrew:
-    name: "{{ item }}"
-  items: "{{ gvm_darwin_build_dependencies }}"
+    name: "{{ gvm_darwin_build_dependencies }}"
   when: gvm_is_dependencies_installed
