--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,8 +1,7 @@
 ---
 - name: Install build dependencies
   yum:
-    name: "{{ item }}"
+    name: "{{ gvm_redhat_build_dependencies }}"
     update_cache: yes
-  items: "{{ gvm_redhat_build_dependencies }}"
   become: "{{ gvm_nonroot }}"
   when: gvm_is_dependencies_installed
