ci: don't install ansible
ansible is already installed.

https://github.com/actions/virtual-environments/blob/main/images/linux/Ubuntu1804-README.md

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: install ansible
-        run: pip install ansible molecule
+        run: |
+          pip install --upgrade pip
+          pip install molecule
       - name: test
         run: molecule test
