ci: add '/home/runner/.local/bin' to PATH
https://github.com/actions/setup-python/issues/99

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install "molecule[docker,lint]"
-          which molecule
-          molecule test
       - name: test
-        run: molecule test
+        run: |
+          export "PATH=/home/runner/.local/bin:$PATH"
+          molecule test
